feat: Implement Claude Code efficiency improvements for AgentForge
- Enhanced TypeScript configuration with strict type checking and path mapping
- Enhanced Vite configuration with optimization settings and path aliases
- Comprehensive type definitions for all components and data structures
- Reusable UI components (Button) with proper typing and TailwindCSS
- Utility functions (cn, validation) for better development experience
- Enhanced ESLint configuration with React and TypeScript rules
- Comprehensive test setup with mocks and utilities
- Development environment configuration (VS Code settings, extensions)
- Central export files for better component organization
- Additional npm scripts for improved development workflow

These improvements will significantly enhance Claude Code's ability to understand, generate, and maintain code in the AgentForge project while maintaining strict Agent OS compliance requirements.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,9 +24,15 @@
       "@utils/*": ["./src/utils/*"],
       "@types/*": ["./src/types/*"],
       "@services/*": ["./src/services/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@lib/*": ["./src/lib/*"],
+      "@constants/*": ["./src/constants/*"],
+      "@contexts/*": ["./src/contexts/*"]
     },
-    "types": ["vitest/globals", "@testing-library/jest-dom"]
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": [
     "src",
