--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,41 +17,43 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,md}\""
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@eslint/js": "^9.33.0",
+    "@hookform/resolvers": "^3.3.0",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^5.0.0",
-    "react-router-dom": "^6.20.0",
     "axios": "^1.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "lucide-react": "^0.294.0",
     "date-fns": "^3.0.0",
-    "zod": "^3.22.4",
+    "globals": "^16.3.0",
+    "lucide-react": "^0.294.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.48.0",
-    "@hookform/resolvers": "^3.3.0"
+    "react-router-dom": "^6.20.0",
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.32",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.5.3",
     "vite": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "@vitest/ui": "^1.0.0",
-    "jsdom": "^22.1.0"
+    "vitest": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
