--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && mvn spring-boot:run",
+    "dev:full": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "type-check": "cd frontend && npm run type-check",
+    "lint:fix": "cd frontend && npm run lint:fix",
+    "format": "cd frontend && npm run format",
+    "test:watch": "cd frontend && npm run test -- --watch",
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && mvn clean package",
