feat: Add production infrastructure, MCP server services, and enhanced monitoring tools
- Add production Docker configurations for all services
- Implement new MCP server services: cache, monitoring, query cache
- Add production infrastructure: nginx, prometheus, autoscaler
- Create new CI/CD workflows for production deployment
- Add advanced analytics and security monitoring services
- Implement new backend caching services
- Add comprehensive production deployment scripts
- Update database schemas and configurations
- Add new Agent OS tools for production monitoring

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,48 +7,80 @@ spring:
   
   # Database Configuration
   datasource:
-    url: jdbc:postgresql://localhost:5432/agentforge
+    url: jdbc:postgresql://localhost:5432/agentforge?prepareThreshold=0&preparedStatementCacheQueries=256&preparedStatementCacheSizeMiB=5&defaultRowFetchSize=1000
     username: ${DB_USERNAME:agentforge}
     password: ${DB_PASSWORD:agentforge}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
-      connection-timeout: 30000
-      idle-timeout: 600000
-      max-lifetime: 1800000
-      # Connection retry settings for Docker environment
+      # Optimized connection pool settings
+      maximum-pool-size: ${DB_POOL_MAX_SIZE:30}
+      minimum-idle: ${DB_POOL_MIN_IDLE:10}
+      connection-timeout: 20000
+      idle-timeout: 300000
+      max-lifetime: 900000
+      # Performance optimizations
       connection-test-query: SELECT 1
-      validation-timeout: 10000
-      leak-detection-threshold: 60000
-      # Additional connection properties for debugging
-      connection-init-sql: SELECT 1
-      initialization-fail-timeout: -1
-      # Connection validation
-      validation-interval: 30000
-      minimum-idle: 1
-      # Connection pool behavior
-      auto-commit: true
+      validation-timeout: 5000
+      leak-detection-threshold: 30000
+      connection-init-sql: |
+        SET application_name = 'agentforge-backend';
+        SET default_transaction_isolation = 'read committed';
+        SET shared_preload_libraries = 'pg_stat_statements';
+      initialization-fail-timeout: 10000
+      # Enhanced connection validation
+      validation-interval: 15000
+      # Optimized connection pool behavior
+      auto-commit: false
       read-only: false
+      # Advanced performance settings
+      data-source-properties:
+        cachePrepStmts: true
+        prepStmtCacheSize: 250
+        prepStmtCacheSqlLimit: 2048
+        useServerPrepStmts: true
+        useLocalSessionState: true
+        rewriteBatchedStatements: true
+        cacheResultSetMetadata: true
+        cacheServerConfiguration: true
+        elideSetAutoCommits: true
+        maintainTimeStats: false
   
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+        format_sql: ${DEBUG:false}
         show_sql: ${DEBUG:false}
+        # Performance optimizations
         jdbc:
-          batch_size: 50
+          batch_size: 100
+          fetch_size: 50
+          time_zone: UTC
         order_inserts: true
         order_updates: true
         batch_versioned_data: true
+        # Query optimization
+        query:
+          plan_cache_max_size: 2048
+          plan_parameter_metadata_max_size: 128
+        # Connection and transaction optimization
         connection:
           provider_disables_autocommit: true
+          autocommit: false
+        # Cache configuration
+        cache:
+          use_second_level_cache: true
+          use_query_cache: true
+          region:
+            factory_class: org.hibernate.cache.jcache.JCacheRegionFactory
+        # Statement processing optimization
+        generate_statistics: ${HIBERNATE_STATS:false}
+        session_factory_name_is_jndi: false
   
   # Redis Configuration
   data:
